--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "earth-store-nextjs",
+  "name": "outdoor-adventure-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
