--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "prod": "rimraf .next && next lint && next build && next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2"
+    "sharp": "0.34.2",
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
@@ -27,6 +32,7 @@
     "prettier-plugin-tailwindcss": "0.6.12",
     "rimraf": "6.0.1",
     "tailwindcss": "4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "5"
   },
   "trustedDependencies": [
