--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-toastify": "^11.0.5",
     "sharp": "0.34.2",
     "swiper": "11.2.8",
     "tailwind-merge": "3.3.1",
